do not save stacktrace of LOCK events from previous windows because 1) such information can usually be inferred from the stacktrace of the read/write event in the race and 2) it's quite expensive